Fix minor layout issue on IE8

--- a/themes/default/css/global.css
+++ b/themes/default/css/global.css
@@ -2162,6 +2162,7 @@ div.wysiwyg_toolbar_color_finder {
 	float: right;
 	margin: 1em 0 0 2em;
 	width: 60px;
+	height: 60px;
 }
 
 .post .post_subline {
